--- a/usbSerialExamples/src/main/res/layout/anr_fragment.xml
+++ b/usbSerialExamples/src/main/res/layout/anr_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/AnrLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="50sp"
+    android:layout_marginStart="@dimen/StartMarginFrag"
     android:theme="@style/AppTheme">
  <!--Mode Radio Group-->
 
@@ -244,7 +244,7 @@
      android:id="@+id/alarm"
      android:layout_width="100dp"
      android:layout_height="60dp"
-     android:layout_marginStart="4dp"
+     android:layout_marginStart="8dp"
      android:layout_marginTop="100dp"
      android:clickable="false"
      android:text="System Alarm"
