--- a/usbSerialExamples/src/main/res/values/colors.xml
+++ b/usbSerialExamples/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
     <color name="textOnBackground">#4CAF50</color>
     <color name="textOff">#A19C9C</color>
     <color name="textOn">#4CAF50</color>
+    <color name="RedAlarmBackground">#EC1016</color>
+    <color name="WaterLevelBackground">#FFEB3B</color>
 
 </resources>
