--- a/usbSerialExamples/src/main/res/values/dimens.xml
+++ b/usbSerialExamples/src/main/res/values/dimens.xml
@@ -8,5 +8,9 @@
     <dimen name="ModeButtonMinWidth">50sp</dimen>
     <dimen name="RadioButtonMarginTop">20sp</dimen>
     <dimen name="RadioButtonBottomMargin">20sp</dimen>
-    <dimen name="anrTextSize">14sp</dimen>
+    <dimen name="ModeTextSize">12sp</dimen>
+    <dimen name="anrTextSize">16sp</dimen>
+    <dimen name="StartMarginFrag">1sp</dimen>
+    <dimen name="flowMeterTxtSize">30sp</dimen>
+    <dimen name="flowMenuHeaderTxtSize">40sp</dimen>
 </resources>
