--- a/usbSerialExamples/src/main/res/values/dimens.xml
+++ b/usbSerialExamples/src/main/res/values/dimens.xml
@@ -8,5 +8,14 @@
     <dimen name="ModeButtonMinWidth">50sp</dimen>
     <dimen name="RadioButtonMarginTop">20sp</dimen>
     <dimen name="RadioButtonBottomMargin">20sp</dimen>
-    <dimen name="anrTextSize">14sp</dimen>
+    <dimen name="ModeTextSize">12sp</dimen>
+    <dimen name="anrTextSize">16sp</dimen>
+    <dimen name="StartMarginFrag">1sp</dimen>
+    <dimen name="flowMeterTxtSize">20sp</dimen>
+    <dimen name="flowMenuHeaderTxtSize">30sp</dimen>
+    <dimen name="spinnerWidth">50dp</dimen>
+    <dimen name="spinnerHeight">20dp</dimen>
+    <dimen name="spinnerMarginStart">16dp</dimen>
+    <dimen name="AnrButtonTextSize">12sp</dimen>
+    <dimen name="timeTextSize">16sp</dimen>
 </resources>
