--- a/usbSerialExamples/src/main/res/layout/anr_fragment.xml
+++ b/usbSerialExamples/src/main/res/layout/anr_fragment.xml
@@ -82,14 +82,14 @@
      android:layout_marginTop="100dp"
      android:clickable="false"
      android:text="System OK"
-     android:textSize="@dimen/anrTextSize"
+     android:textSize="@dimen/AnrButtonTextSize"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
 
  <Button
      android:id="@+id/effPumpTest"
-     android:layout_width="100dp"
-     android:layout_height="60dp"
+     android:layout_width="@dimen/TestButtonWidth"
+     android:layout_height="@dimen/TestButtonHeight"
      android:layout_marginTop="220dp"
      android:layout_marginEnd="36dp"
      android:text=" Effluent Pump"
@@ -99,8 +99,8 @@
 
  <Button
      android:id="@+id/ffTest"
-     android:layout_width="100dp"
-     android:layout_height="60dp"
+     android:layout_width="@dimen/TestButtonWidth"
+     android:layout_height="@dimen/TestButtonHeight"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="36dp"
      android:text="Field Flush"
@@ -110,8 +110,8 @@
 
  <Button
      android:id="@+id/peristalticTest"
-     android:layout_width="100dp"
-     android:layout_height="60dp"
+     android:layout_width="@dimen/TestButtonWidth"
+     android:layout_height="@dimen/TestButtonHeight"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="36dp"
      android:text="Peristaltic"
@@ -121,8 +121,8 @@
 
  <Button
      android:id="@+id/alarmReset"
-     android:layout_width="100dp"
-     android:layout_height="60dp"
+     android:layout_width="@dimen/TestButtonWidth"
+     android:layout_height="@dimen/TestButtonHeight"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="36dp"
      android:text="System Alarm Latching Reset"
@@ -132,8 +132,8 @@
 
  <Button
      android:id="@+id/recirTest"
-     android:layout_width="100dp"
-     android:layout_height="60dp"
+     android:layout_width="@dimen/TestButtonWidth"
+     android:layout_height="@dimen/TestButtonHeight"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="36dp"
      android:text="Recirculate"
